[package]
name = "ffi_struct_derive"
version = "0.1.1"
edition = "2024"
authors = ["0xAA55 <838816058@qq.com>"]
readme = "Readme.md"
license-file = "LICENSE"
description = "This crate is a supporting library for the `ffi_struct` crate. It provides the proc macro `FFIStruct` which is used in conjunction with the `ffi_struct_trait` crate to provide an easy way to make a struct iterable in Rust and better than `struct_iterable` since you could have more detailed manipulation to the paddings."
repository = "https://github.com/0xAA55/ffi_struct_derive"
keywords = ["FFI", "struct", "API", "padding", "reflection"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }


